--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -1,6 +1,6 @@
 <% @title = "Разыскивается #{@missing.name}" %>
 <script>
-	var missing_path = "<%= missing_path(@missing) %>";
+	missing_path("<%= missing_path(@missing) %>");
 </script>
 <%= render 'show_questions' if current_user && @missing.user.id == current_user.id %>
 
