--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -478,7 +478,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 	border-radius: 5px;
 }
 
-.b-form__question_form .b-form__label {
+.b-form__question_answer .b-form__label {
 	padding: 10px 0 5px;
 }
 
