Auth update (confirmation and etc)

--- a/app/assets/stylesheets/app/b-tooltip.css
+++ b/app/assets/stylesheets/app/b-tooltip.css
@@ -144,17 +144,24 @@
 .b-tooltip.error.bottom .b-tooltip__tail_border { border-top-color: #ef9797; }
 .b-tooltip.error.bottom .b-tooltip__tail { border-top-color: #fedbdb; }
 
+label.b-tooltip, label.b-tooltip-error, label.b-tooltip-error-block  {
+  min-height: 15px;
+  padding: 8px 14px;
+  margin: 4px;    
+
+  display: inline-block;
+  position: static;
+}
+
+label.b-tooltip.block {
+    margin: 4px 0;
+}
+
 label.b-tooltip-error, label.b-tooltip-error-block {
   color: #b21b1b;
   border: 1px solid #ef9797;
   background: #fedbdb;
-
-  min-height: 15px;
-  padding: 8px 14px;
-  margin: 4px;
-
-  display: inline-block;
-}             
+}
 
 label.b-tooltip-error-block {
 	margin: 4px 0;
