--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -14,8 +14,6 @@ input[type="text"], input[type="password"], input[type="email"] {
 	height: 14px;
 }
 
-
-
 /* hr в форме */
 .b-hr.form {
 	border-top-color: #d6d6d6;
@@ -630,4 +628,13 @@ input[type="text"], input[type="password"], input[type="email"] {
 	border-right: 0;
 
     color: #000;
+}
+
+input[disabled] {
+-moz-opacity: 0.55;
+-khtml-opacity: 0.55;
+opacity: 0.55;
+-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=55);
+filter: progid:DXImageTransform.Microsoft.Alpha(opacity=55);
+filter:alpha(opacity=55);
 }
