--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -634,7 +634,7 @@ input[disabled] {
 -moz-opacity: 0.55;
 -khtml-opacity: 0.55;
 opacity: 0.55;
--ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=55);
+-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=55);
 filter: progid:DXImageTransform.Microsoft.Alpha(opacity=55);
 filter:alpha(opacity=55);
 }
