Add missing update

--- a/app/assets/stylesheets/app/b-form.css.erb
+++ b/app/assets/stylesheets/app/b-form.css.erb
@@ -142,7 +142,7 @@ input[type="text"], input[type="password"], input[type="email"] {
 	
 	float: left;
 	margin-left: 42px;   
-	height: 120px;
+	min-height: 120px;
 }             
 	.b-form__photo_loading {
 		width: 100px;
