--- a/app/views/missings/show.html.erb
+++ b/app/views/missings/show.html.erb
@@ -2,8 +2,9 @@
 <script>
 	missing_path("<%= missing_path(@missing) %>");
 </script>
-<%= render 'show_questions' if current_user && @missing.user.id == current_user.id %>
 
+<%= render 'show_questions' if current_user && @missing.user.id == current_user.id %>
+<%= render 'question' if current_user && current_user.id = @missing.user.id && @missing.impressionist_count(:user_id => current_user.id) < 2 %>
 <div class="container_16 p-missing">
 	<div class="grid_11">
 		<div class="t-big_fat b-missing__wanted_h">
@@ -47,7 +48,7 @@
 		    <%= form_for @seen, :url => "/seen_the_missing.json", :remote => true do |seen| %>
 		      <div class="b-missing__i_saw_in <%= "l-hidden" if @seen.new_record? %>">
 		      <label for="i_saw_in" class="l-block">Я видел этого человека в <span class="b-missing__i_saw_in_place"><%= YandexInflect.inflections(seen.object.address)[5] unless @location.nil?%></span></label>
-		      <button class="b-missing__i_saw_in_change silver">Уточнить</button>    
+		      <input type="button" class="b-missing__i_saw_in_change silver" value="Уточнить" />    
 		    </div>
 
 		    <div class="b-missing__i_saw_in_change_container l-hidden">
