--- a/app/assets/stylesheets/ui.css
+++ b/app/assets/stylesheets/ui.css
@@ -927,13 +927,9 @@ input.ui-button.red_action, input.ui-button.red_action.ui-state-active {
 /* Overlays */
 .ui-widget-overlay { 
 /*	background: #666666 url(images/ui-bg_diagonals-thick_20_666666_40x40.png) 50% 50% repeat; */
-	background-color:#ffffff;
-	background-image: -moz-radial-gradient(50% 50%, circle closest-side, #ffffff 33%,#000000 30em);
-	background-image: -webkit-radial-gradient(50% 50%, circle closest-side, #ffffff 33%,#000000 30em);
-	background-image: -o-radial-gradient(50% 50%, circle closest-side, #ffffff 33%,#000000 30em);
-	background-image: -ms-radial-gradient(50% 50%, circle closest-side, #ffffff 33%,#000000 30em);
-	background-image: radial-gradient(50% 50%, circle closest-side, #ffffff 33%,#000000 30em);
-	opacity: .15;filter:Alpha(Opacity=15); 
+	background-color:#000;
+
+	opacity: .05;filter:Alpha(Opacity=15); 
 }
 /*.ui-widget-shadow { margin: -5px 0 0 -5px; padding: 5px; background: #000000 url(images/ui-bg_flat_10_000000_40x100.png) 50% 50% repeat-x; opacity: .20;filter:Alpha(Opacity=20); -moz-border-radius: 5px; -khtml-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px; }*/
 /*
