--- a/app/assets/stylesheets/app/p-missing.css.erb
+++ b/app/assets/stylesheets/app/p-missing.css.erb
@@ -167,9 +167,8 @@
 	display: inline-block;
 }
 
-div.b-missing__share {
-	width: 11em;
-	margin-left: 3px;
+.b-missing__sharies .b-share {
+  margin-top: -5px;
 }
 
 .b-missing__map_border {
