--- a/app/views/missings/_question.html.erb
+++ b/app/views/missings/_question.html.erb
@@ -1,5 +1,7 @@
-<div class="container_16 b-questions">
-
+<script>
+  var questions_disabled = true;
+</script>
+<div class="container_16 b-disabled-questions b-questions">
 	<div class="grid_8">
 		<h2>Ваше объявление опубликовано!</h2>
 		<div class="description">
@@ -32,7 +34,7 @@
 
 	<div class="grid_8">
 		<h3>У нас еще много вопросов по вашему делу.</h3>
-		<p class="description">Вы можете <a href="#">продолжить отвечать на вопросы</a>.</p>
+		<p class="description">Вы можете <a href="#" class="b-question__toggle">продолжить отвечать на вопросы</a>.</p>
 	</div>
 
 	<div class="grid_8">
