--- a/app/views/report/index.html.erb
+++ b/app/views/report/index.html.erb
@@ -83,15 +83,8 @@
             </p>
 
             <br/>
-		    <div class="l-left">Расскажите о пропаже:</div>
-			<div class="addthis_toolbox addthis_default_style l-left b-missing__share">
-				<a class="addthis_button_preferred_1"></a>
-				<a class="addthis_button_preferred_2"></a>
-				<a class="addthis_button_preferred_3"></a>
-				<a class="addthis_button_preferred_4"></a>
-				<a class="addthis_button_compact"></a>
-				<a class="addthis_counter addthis_bubble_style"></a>   
-			</div>   
+		    <div class="l-left">Расскажите всем о пропаже:</div>			
+            <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,lj,twitter,odnoklassniki,yaru,moimir,friendfeed"></div> 
 		    <div class="clear"></div>	
 		</div>  
 		 
