--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -60,8 +60,8 @@
         <%= user.password_field :password_confirmation %>
       </div>
     </div>
-    <div class="b-form__save_complete_notification l-hidden">
-      <label class="b-tooltip notification block">
+    <div class="b-form__save_complete_notification">
+      <label class="b-tooltip notification block" style="display: none">
         Данные сохранены
       </label>
     </div>
