--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,7 @@
   <%= stylesheet_link_tag "application" %>
   
   <%= javascript_include_tag "application" %>    
-  <%= javascript_include_tag "http://api-maps.yandex.ru/1.1/index.xml?key=AHmGEU8BAAAAJIFvPQIAD1wXXrhoqnwsspxpPhtmLSqwEwgAAAAAAAAAAAAbOVs7mmCHXD2cPLCxn5CBw7VoPQ==" %>                      
-  <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=ra-4e5c782a66f297f6"></script>
+
   <script>
     var logged_in = <%= current_user ? "true" : "false" %>;
   </script>
@@ -175,18 +174,28 @@
 
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
   <script>
-    var _gaq=[['_setAccount','UA-26145427-1'],['_trackPageview'],['_trackPageLoadTime'],['_setDomainName', '.yapropal.ru']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 
   <%= yield :scripts %>
   <script type="text/javascript">
-    var reformalOptions = {
-        project_id: 54648,
-        project_host: "naidutebya.reformal.ru",
-        force_new_window: false
+    var _gaq=[['_setAccount','UA-26145427-1'],['_trackPageview'],['_trackPageLoadTime'],['_setDomainName', '.yapropal.ru']];
+        (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
+        g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+        s.parentNode.insertBefore(g,s)}(document,'script')),
+        reformalOptions = {
+          project_id: 54648,
+          project_host: "naidutebya.reformal.ru",
+          force_new_window: false
     };
     
-    (function()
+    (function() {
+        var script = document.createElement('script');
+        script.type = 'text/javascript'; script.async = true;
+        script.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'media.reformal.ru/widgets/v1/reformal.js?1';
+        document.getElementsByTagName('head')[0].appendChild(script);
+    })();
+  </script>
+  <%= javascript_include_tag "//yandex.st/share/share.js" %>
+  <%= javascript_include_tag "http://api-maps.yandex.ru/1.1/index.xml?key=AHmGEU8BAAAAJIFvPQIAD1wXXrhoqnwsspxpPhtmLSqwEwgAAAAAAAAAAAAbOVs7mmCHXD2cPLCxn5CBw7VoPQ==" %>                     
+</body>
+</html>
